[gd_scene load_steps=13 format=2]

[ext_resource path="res://icon - Copy.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Shot.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Evade.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Player/spot.png" type="Texture" id=6]
[ext_resource path="res://Player/HurtBox.gd" type="Script" id=7]
[ext_resource path="res://Player/HurtBox.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.1068
height = 8.56116

[sub_resource type="CircleShape2D" id=2]
radius = 44.0041

[sub_resource type="Animation" id=3]
resource_name = "End"
length = 0.1

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 0.2

[node name="Player" type="KinematicBody2D"]
modulate = Color( 0.380392, 0.380392, 0.380392, 1 )
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
texture_scale = 10.0
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 5.0

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="EndofGun" type="Position2D" parent="."]
position = Vector2( 6, 0 )

[node name="Shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[node name="Teleport" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="HurtBox" parent="." instance=ExtResource( 8 )]
collision_layer = 8
collision_mask = 0
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="HurtBox"]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/End = SubResource( 3 )
anims/Start = SubResource( 4 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_ended" from="HurtBox" to="HurtBox" method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="invincibility_started" from="HurtBox" to="HurtBox" method="_on_HurtBox_invincibility_started"]
[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_Timer_timeout"]
